--- a/norn.html
+++ b/norn.html
@@ -93,7 +93,7 @@
                         + 7 893 567 78 67
                     </div>
             </div>
-            <div class="map"></div>
+            <div class="map">NORN</div>
         </div>
             
         </div>
