--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="kub1-fon"></div>
           <div><p>NORN - школа обучения северным языкам в Санкт-Петербурге.</p>
             <p>Фьорды, хюгге, Йоулупукки, IKEA и Эйяфьядлайёкюдль.</p></div>
-          <div>КНОПКА</div>
+          <div><button>КНОПКА</button></div>
         </div>
         </div>
         <div class="kub2">   
@@ -113,23 +113,25 @@
 </div>
 
     <div class="container_about">    
-    <div class="about_footer"> <img src="img/footer.png" width="1510" height="750"></div>
+    <div class="about_footer"> <img class="m" src="img/footer.png" width="1510" height="750"></div>
     <div class="about">    
     <div class="about1">
-            <div class="logo_about"></div>
+            <div class="logo_about"><img src="img/mark3_white.png" width="75px" height="75px"></div>
         <div class="text_about">
             <div class="logo_text_about">NORN</div>  
             <div class="logo_text_about2">школа скандинавских языков</div>
         </div>
     </div>
         <div class="about2">
-            <div>in</div> 
-            <div>vk</div> 
-            <div>fb</div>            
-            <div>+ 7 893 567 78 67</div> 
+            <div class="ikonki">
+            <div><img src="img/instagram_white.svg" width="30px" height="30px"></div> 
+            <div><img src="img/vk_white.svg" width="39px" height="29.2px"></div> 
+            <div><img src="img/facebook_white.svg" width="30px" height="30px"></div>
+            </div>            
+            <div class="text_about2">+ 7 893 567 78 67</div> 
         </div>
-            <div class="about3">
-                <div>199983, Санкт-Петербург
+             <div class="about3">
+                <div>199983, Санкт-Петербург <br>
                  ул. Казанская, 32, БЦ “Успех”, 7 этаж</div>
                  <div>c 10:00 до 22:00 ежедневно</div> 
             </div>
@@ -138,7 +140,7 @@
 </div>
         
     <div class="footer">
-        <div class="map"> <img src="img/map.png" width="1510" height="340"></div>
+        <div class="map"> <img class="m" src="img/map.png" width="1510" height="340"></div>
         <div class="logo_footer">NORN </div>
         <div class="tr"></div>
     </div>
