--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     </div>
 
     <div class="menu">
-        <div>КУРСЫ</div>
-        <div>УЧИТЕЛЯ</div>
-        <div>ЛЕТНЯЯ ШКОЛА</div>
-        <div>КОНТАКТЫ</div>  
+        <ui>
+        <li>КУРСЫ</li>
+        <li>УЧИТЕЛЯ</li>
+        <li>ЛЕТНЯЯ ШКОЛА</li>
+        <li>КОНТАКТЫ</li>  
+    </ui>
     </div>
 
 
@@ -41,7 +43,7 @@
           <div class="kub1-fon"></div>
           <div><p>NORN - школа обучения северным языкам в Санкт-Петербурге.</p>
             <p>Фьорды, хюгге, Йоулупукки, IKEA и Эйяфьядлайёкюдль.</p></div>
-          <div><button>КНОПКА</button></div>
+          <div class="button"><button>КНОПКА</button></div>
         </div>
         </div>
         <div class="kub2">   
@@ -57,7 +59,7 @@
         
     <div class="education2">
         <div class="edu_center">
-        <div class="logo2"></div>
+        <div><img src="img/mark5_white.svg" width="130px" height="117px"></div>
         <div class="logo2_2">КАКОЙ ВИД ОБУЧЕНИЯ ПОДОЙДЕТ ВАМ? </div>
         </div>
         <div class="education2_0">
@@ -66,11 +68,13 @@
             <div>Подойдет для удаленного изучения </div>
             <div>ЗАПОЛНИТЬ  АНКЕТУ </div>
         </div>
+        <div class="rombik"></div>
         <div class=education2_2>
             <div>ЗАНЯТИЯ В ГРУППЕ </div>
             <div>Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе </div>
             <div>СМОТРЕТЬ РАСПИСАНИЕ </div>
         </div>
+        <div class="rombik"></div>
         <div class=education2_3>
             <div>ИНДИВИДУАЛЬНОЕ ОБУЧЕНИЕ  </div>
             <div>Индивидуальные занятия с 
@@ -116,7 +120,7 @@
     <div class="about_footer"> <img class="m" src="img/footer.png" width="1510" height="750"></div>
     <div class="about">    
     <div class="about1">
-            <div class="logo_about"><img src="img/mark3_white.png" width="75px" height="75px"></div>
+            <div><img src="img/mark3_white.svg" width="75px" height="75px"></div>
         <div class="text_about">
             <div class="logo_text_about">NORN</div>  
             <div class="logo_text_about2">школа скандинавских языков</div>
