--- a/index.html
+++ b/index.html
@@ -14,26 +14,28 @@
 <div class="wrapper">
 
     <div class="contacts">
-        <div style="flex: 3;">    
-            школа скандинавских языков
-        </div>
-        <div style="flex: 1;"> 
-            + 7 893 567 78 67
-        </div> 
+        <div>школа скандинавских языков</div>
+        
+            <div class="contacts_text">
+            <div>+ 7 893 567 78 67</div>
+            <div><img src="img/instagram_black.svg" width="30px" height="30px"></div>
+            <div><img src="img/vk_black.svg" width="39px" height="39px"></div>
+            <div><img src="img/facebook_black.svg" width="30px" height="30px"></div>
+            </div> 
+        
     </div>
 
    <div class="logo">
-        <div class="hill"></div>
-       <div>logo</div>
-       <div>NORN</div>       
+       <div><img src="img/mark3.svg" width="88px" height="88px"></div>
+       <div class="logo_logo">NORN</div>       
     </div>
 
     <div class="menu">
-        <ui>
-        <li>КУРСЫ</li>
-        <li>УЧИТЕЛЯ</li>
-        <li>ЛЕТНЯЯ ШКОЛА</li>
-        <li>КОНТАКТЫ</li>  
+        <ui class="menu_tab">
+        <li class="it">КУРСЫ</li>
+        <li class="it">УЧИТЕЛЯ</li>
+        <li class="it">ЛЕТНЯЯ ШКОЛА</li>
+        <li class="it">КОНТАКТЫ</li>  
     </ui>
     </div>
 
