--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NORN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="css/style_css.css">
-     
+    <link rel="stylesheet" href="css/style_css.css"> 
+    <link href="https://fonts.googleapis.com/css?family=Puritan|Ubuntu" rel="stylesheet">    
 </head>
 <body>
-
 <div class="wrapper">
 
     <div class="contacts">
