--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="menu">
         <ul class="menu_tab">
-        <li class="it_left"><a href="" class="line">КУРСЫ</a></li>
+        <li class="it_left"><a href="index_2.html" class="line">КУРСЫ</a></li>
         <li class="it"><a href="" class="line">УЧИТЕЛЯ</a></li>
         <li class="it"><a href="" class="line">ЛЕТНЯЯ ШКОЛА</a></li>
         <li class="it"><a href="" class="line">КОНТАКТЫ</a></li>  
