--- a/index_2.html
+++ b/index_2.html
@@ -26,7 +26,7 @@
             <div class="menu">
                     <ul class="menu_tab">
                     <li class="it"><a href="" class="line">КУРСЫ</a></li>
-                    <li class="it"><a href="" class="line">О НАС</a></li>
+                    <li class="it"><a href="index.html" class="line">О НАС</a></li>
                     <li class="it"><a href="" class="line">ЛЕТНЯЯ ШКОЛА</a></li>
                     <li class="it"><a href="" class="line">КОНТАКТЫ</a></li>  
                     </ul>
