--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         
     <div class="kyb_fon_white"></div>
     <div class="kyb_fon_white2"></div>
-    
+
+    <div class="container_rovno_fon"> 
     <div class="education2">
         <div class="edu_center">
         <div><img src="img/mark5_white.svg" alt="logo" width="130px" height="117px"></div>
@@ -105,7 +106,7 @@
         </div>
         <div class="gradient_slaider"></div>
     </div>
-
+</div>
     <div class="advanteges">
 
         <div class="seryi_container">
