--- a/index_2.html
+++ b/index_2.html
@@ -17,7 +17,7 @@
 
         <div class="romb">
             <div class="logo">
-            <div><img src="img/mark3.svg" alt="logo" width="88px" height="88px"></div>
+            <div><img src="img/mark3.svg" alt="logo" width="73px" height="73px"></div>
             <div class="logo_logo">NORN</div>       
         </div></div>
 
@@ -52,7 +52,7 @@
             </div>
     
             <div class="container_yrovni">
-                    <div class="tex_yrovni">УРОВЕНЬ ВЛАДЕНИЯ</div>
+                    <div class="tex_yrovni">ВЫБЕРЕТЕ ВАШ УРОВЕННЬ ВЛАДЕНИЯ ЯЗЫКОМ</div>
                     <div class="flex_yrovni">
                         <div class="yrovni">Начинающий (A1)</div>
                         <div class="yrovni">Начинающий (A2)</div>
