--- a/index.html
+++ b/index.html
@@ -135,25 +135,27 @@
         </div>
 
         <div class="container_nature">
-                <div class="nature_foto"><img src="img/img_nature.png" alt="nature" width="532" height="507"></div>
+                <div class="nature_foto"><img src="img/img_nature.png" alt="nature" width="532px" height="507px"></div>
+                <div class="kub_vkube_nature"></div>
         </div>
 
         <div class="container_student">
-                <div class="student_foto"><img src="img/img_student.png" alt="student" width="345" height="329"></div>
+                <div class="student_foto"><img src="img/img_student.png" alt="student" width="345px" height="329px"></div>
+                <div class="kub_vkube_student"></div>
         </div>
 
         <div class="container_cup">
-                <div class="cup_foto"><img src="img/img_cup.png" alt="cup" width="532" height="454"></div>
+                <div class="cup_foto"><img src="img/img_cup.png" alt="cup" width="532px" height="454px"></div>
         </div>
 
         <div class="container_cabinet">
-            <div class="cabinet_foto"><img src="img/img_cabinet.png" alt="cabinet" width="616" height="294"></div>
+            <div class="cabinet_foto"><img src="img/img_cabinet.png" alt="cabinet" width="616px" height="294px"></div>
         </div>
 
         <div class="container_teacher">
                 <div class="kub_teacher">
                         <div class="blue_teacher"><div class="white_teacher"></div></div>
-                        <div class="foto_teacher"><img src="img/img_teacher.png" alt="teacher" width="330" height="270"></div>                     
+                        <div class="foto_teacher"><img src="img/img_teacher.png" alt="teacher" width="330px" height="270px"></div>                     
                     </div>
         </div>
     </div>
