--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="education2_2">
             <div>ЗАНЯТИЯ В ГРУППЕ</div>
             <div>Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе</div>
-            <div class="text_edu_2_2"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ<img class="ar" src="img/arrow.svg" width="29px" height="17px"></a></div>
+            <div class="text_edu_2_2"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
         </div>
         <img src="img/rombik.svg" alt="rombik" width="15px" height="15px">
         <div class=education2_3>
