--- a/index_2.html
+++ b/index_2.html
@@ -141,7 +141,29 @@
             <div class="tex_raspisanie">РАСПИСАНИЕ СТАРТА КУРСОВ</div>
             <div class="tex_raspisanie2">Чтобы узнать дату первого занятия, выбирете язык и уровень выше</div>
             <div class="flex_raspisanie">
-                    <div class="raspisanie">ФЕВРАЛЬ</div>
+                    <div class="raspisanie">
+                        
+                        <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                                    <div class="rombiki_raspisanie2_1"></div>
+                            </div>
+                            <div class="rombiki_raspisanie3">
+                                                                </div>
+                            <div class="rombiki_raspisanie4">
+                                    <div class="rombiki_raspisanie4_1"></div>
+                            </div>
+                            <div class="rombiki_raspisanie5">
+                                    <div class="rombiki_raspisanie5_1"></div>
+                            </div>
+                            <div class="rombiki_raspisanie6"></div>
+                            <div class="rombiki_raspisanie7">
+                                <div class="rombiki_raspisanie7_1"></div>
+                            </div>
+                            <div class="rombiki_raspisanie8"></div>
+                        </div>
+                        <div>ФЕВРАЛЬ</div>
+                    </div>
                     <div class="raspisanie">МАРТ</div>
                     <div class="raspisanie">АПРЕЛЬ</div>
                     <div class="raspisanie">МАЙ</div>
