--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <p>Фьорды, хюгге, Йоулупукки, IKEA <br>и Эйяфьядлайёкюдль.</p>
           <button>КНОПКА</button></div></div>
         </div></div>
-        <div class="kub2">   
-            <div class="kub2_svser">
+    <div class="kub2">   
+        <div class="kub2_svser">
             <div class="kub2_text">
             <div>íslenska</div>
             <div>norsk</div>
@@ -56,10 +56,10 @@
             <div>suomi</div>
             </div>
                     
-         </div>
-         <div class="kybiki_svser">
+        <div class="kybiki_svser">
             <div class="kybik_svser"></div>
-        </div>
+            <div class="kybik_svser2"></div>
+        </div></div>
      </div> 
     </div>     
 
