--- a/index_2.html
+++ b/index_2.html
@@ -142,13 +142,14 @@
             <div class="tex_raspisanie2">Чтобы узнать дату первого занятия, выбирете язык и уровень выше</div>
             <div class="flex_raspisanie">
                     <div class="raspisanie">
-                        
+                            <div class="raspisanie_fon"></div>
                         <div class="rombiki_raspisanie">
                             <div class="rombiki_raspisanie1"></div>
                             <div class="rombiki_raspisanie2">
                                     <div class="rombiki_raspisanie2_1"></div>
                             </div>
-                            <div class="rombiki_raspisanie3">
+                            <div class="rombiki_raspisanie3"> 
+                                <div class="rombiki_raspisanie3_1"></div>
                                                                 </div>
                             <div class="rombiki_raspisanie4">
                                     <div class="rombiki_raspisanie4_1"></div>
@@ -162,35 +163,61 @@
                             </div>
                             <div class="rombiki_raspisanie8"></div>
                         </div>
-                        <div>ФЕВРАЛЬ</div>
+                        <div class="rombiki_raspisanie_text">
+                        <div class="data_raspisanie">
+                                    <div>05.02</div>
+                                    <div>07.02</div>
+                                    <div>10.02</div>
+                                    <div>20.02</div>
+                        </div>
+                        <div class="yrok_raspisanie">
+                            <div>исландский А1</div>
+                            <div>исландский А2</div>
+                            <div>норвежский B1</div>
+                            <div>финский А1</div>
+                        </div>
+                            <div class="rombiki_raspisanie_mesiac">ФЕВРАЛЬ</div>
                     </div>
-                    <div class="raspisanie">МАРТ</div>
-                    <div class="raspisanie">АПРЕЛЬ</div>
-                    <div class="raspisanie">МАЙ</div>
-                    <div class="raspisanie">ИЮНЬ</div>
-                    <div class="raspisanie">ИЮЛЬ</div>
-            </div>
-            <div class="flex_zapis1"><div>ЗАПИСАТЬСЯ В ГРУППУ</div>
-            <div></div>
-            </div>
-            <div class="flex_zapis2"><div>ДОБАВИТЬ В КАЛЕНДАРЬ</div>
+                    </div>
+
+                    <div class="raspisanie"> </div> 
+
+                    <div class="raspisanie"> </div> 
+
+                    <div class="raspisanie"> </div> 
+
+                    <div class="raspisanie"> </div> 
+
+                    <div class="raspisanie">
+                            <div class="flex_zapisi">
+                                    <div class="flex_zapis left"><div class="flex_zapis_text">ЗАПИСАТЬСЯ<br>В ГРУППУ</div>
+                                    <div></div>
+                                    </div>
+                                    <div class="flex_zapis right"><div class="flex_zapis_text">ДОБАВИТЬ<br>В КАЛЕНДАРЬ</div>
+                                    </div>
+                                   </div> </div> 
+
             </div>
            </div>
 
-            <div class="footer">
+<div class="footer">
+
 <div class="romb_footer"></div>
+<div class="romb_footer_logo">
 <img src="img/mark3_white.svg" alt="logo" width="61px" height="61px">
-<div> NORN
+<div class="tex_foter"> NORN<br>
       школа скандинавских языков</div>
-<div> 199983, Санкт-Петербург
-        ул. Казанская, 32, БЦ “Успех”, 7 этаж
-        c 10:00 до 22:00 с ПН по СБ</div>
+</div>
+<div class="tex_foter footer_tex"> 
+    <p>199983, Санкт-Петербург<br>
+        ул. Казанская, 32, БЦ “Успех”, 7 этаж<br>
+        c 10:00 до 22:00 с ПН по СБ</p>
             
-<div>   norn@gmail.com
-        + 7 893 567 78 67
-</div></div>
+<p>orn@gmail.com<br>
+        + 7 893 567 78 67</p>
+</div>
 <div class="flex_text_footer">
-<div class="tex_foter1">
+<div class="tex_foter">
 <div>Шведский язык</div>
 <div>Норвежский язык</div>
 <div>Исландский язык</div>
@@ -199,7 +226,7 @@
 <div>Тестирование</div>
 <div>Формы обучения</div>
 </div>
-<div class="tex_foter2">
+<div class="tex_foter">
 <div>Аудитории</div>
 <div>Преподаватели</div>
 <div>Летняя школа</div>
