--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="rombik_flex">
         <div class="rombik"></div>
         <div class="rombik"></div>
-        <div class="rombik"></div>
+        <div class="rombik_border"></div>
         <div class="rombik"></div>
         <div class="rombik"></div>
     </div>
@@ -223,6 +223,13 @@
         
     <div class="footer">
            <div class="map"></div>
+           <div class="footer_metka">
+               <div class="footer_logo">NORN</div>
+               <div class="metka">
+                   <img src="img/ellipse_white.svg" alt="ellipse_white" width="36px" height="52px">
+                   <img class="kryg" src="img/ellipse_seryi.svg" alt="ellipse_seryi" width="15px" height="15px">
+                </div>
+           </div>
     </div>
     
 </div>
