--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Puritan|Ubuntu" rel="stylesheet">    
 </head>
 <body>
+    <div class="container_wrapper">
 <div class="wrapper">
 
     <div class="contacts">
@@ -233,6 +234,8 @@
     </div>
     
 </div>
+</div>
 
 </body>
+<script src="js.js"></script> 
 </html>
