--- a/index_2.html
+++ b/index_2.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Puritan|Roboto|Ubuntu" rel="stylesheet">
 </head>
 <body>
-
+<div class="container_wrapper">
      <div class="wrapper">
 
             <div class="logo_contacts">
@@ -233,7 +233,7 @@
 <div>FAQ</div>
 </div>
 </div>
-
+</div>
      </div>    
 </body>
 </html>
