--- a/index_2.html
+++ b/index_2.html
@@ -162,18 +162,12 @@
                             <div class="rombiki_raspisanie8"></div>
                         </div>
                         <div class="rombiki_raspisanie_text">
-                        <div class="data_raspisanie">
-                                    <div>05.02</div>
-                                    <div>07.02</div>
-                                    <div>10.02</div>
-                                    <div>20.02</div>
-                        </div>
-                        <div class="yrok_raspisanie">
-                            <div>исландский А1</div>
-                            <div>исландский А2</div>
-                            <div>норвежский B1</div>
-                            <div>финский А1</div>
-                        </div>
+                         <div class="yrok_raspisanie">
+                            <div>05.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А1</div>
+                            <div>07.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А2</div>
+                            <div>10.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский B1</div>
+                            <div>20.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский А1</div>
+                         </div>
                             <div class="rombiki_raspisanie_mesiac">ФЕВРАЛЬ</div>
                     </div>
                     </div>
