--- a/index.html
+++ b/index.html
@@ -212,12 +212,15 @@
             <div><a href=""><img src="img/vk_white.svg" alt="vk" width="39px" height="29.2px"></a></div> 
             <div><a href=""><img src="img/facebook_white.svg" alt="facebook" width="30px" height="30px"></a></div>
             </div>            
-            <div class="text_about2">+ 7 893 567 78 67</div> 
+            <div class="text_about2">
+                    <div>+ 7 893 567 78 67</div>
+                    <div class="text_pad">norn@gmail.com</div> 
+                </div>
         </div>
              <div class="about3">
                 <div>199983, Санкт-Петербург <br>
                  ул. Казанская, 32, БЦ “Успех”, 7 этаж</div>
-                 <div>c 10:00 до 22:00 ежедневно</div> 
+                 <div>c 10:00 до 22:00 с ПН по СБ</div> 
             </div>
         
     </div></div>
