--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="bordo_flex">
           <div class="kub1_bordo_text"><p>NORN - школа обучения северным <br> языкам в Санкт-Петербурге.</p>
             <p>Фьорды, хюгге, Йоулупукки, IKEA <br>и Эйяфьядлайёкюдль.</p>
-          <button>КНОПКА</button></div></div>
+          <button>ПОДРОБНЕЕ</button></div></div>
         </div></div>
     <div class="kub2">   
         <div class="kub2_svser">
@@ -86,21 +86,21 @@
         <div class="logo2_2">КАКОЙ ВИД ОБУЧЕНИЯ ПОДОЙДЕТ ВАМ?</div>
         </div>
         <div class="education2_0">
-        <div class=education2_1> 
-            <div>ОНЛАЙН</div>
-            <div>Подойдет для удаленного изучения</div>
-            <div class="text_edu_2_1"><a href="" class="line_white">ЗАПОЛНИТЬ АНКЕТУ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
+        <div class=education_blok> 
+            <div class="kegl_b">ОНЛАЙН</div>
+            <div class="kegl_m">Подойдет для удаленного изучения</div>
+            <div class="kegl_m"><a href="" class="line_white">ЗАПОЛНИТЬ АНКЕТУ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
         </div>
         <img src="img/rombik.svg" alt="rombik" width="15px" height="15px">
-        <div class="education2_2">
-            <div>ЗАНЯТИЯ В ГРУППЕ</div>
-            <div>Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе</div>
-            <div class="text_edu_2_2"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
+        <div class="education_blok">
+            <div class="kegl_b">ЗАНЯТИЯ В ГРУППЕ</div>
+            <div class="kegl_m">Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе</div>
+            <div class="kegl_m"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
         </div>
         <img src="img/rombik.svg" alt="rombik" width="15px" height="15px">
         <div class=education2_3>
-            <div>ИНДИВИДУАЛЬНОЕ ОБУЧЕНИЕ</div>
-            <div>Индивидуальные занятия с 
+            <div class="kegl_b">ИНДИВИДУАЛЬНОЕ ОБУЧЕНИЕ</div>
+            <div class="kegl_m">Индивидуальные занятия с 
             преподавателем в удобное 
             время </div>
         </div>
