--- a/index_adaptiv.html
+++ b/index_adaptiv.html
@@ -12,50 +12,58 @@
 <body>
 <div class="wrapper">
 
-    <div class="contacts">
-            <div>школа скандинавских языков</div>        
-            <div class="contacts_text">
-            <div>+ 7 893 567 78 67</div>
-            <div><a href=""><img src="img/instagram_black.svg" alt="instagram" width="30px" height="30px"></a></div>
-            <div><a href=""><img src="img/vk_black.svg" alt="vk" width="39px" height="39px"></a></div>
-            <div><a href=""><img src="img/facebook_black.svg" alt="facebook" width="30px" height="30px"></a></div>
-        </div>  
-    </div>
+   
+        <div class="contacts">
 
-    <div class="logo">
-       <div><img src="img/mark3.svg" alt="logo" width="88px" height="88px"></div>
-       <div class="logo_logo">NORN</div>       
-    </div>
-    <button>КНОПКА</button>
-    <div class="menu">
-        <ul class="menu_tab">
-        <li class="it_left"><a href="index_2.html" class="line">КУРСЫ</a></li>
-        <li class="it"><a href="" class="line">О НАС</a></li>
-        <li class="it"><a href="" class="line">ЛЕТНЯЯ ШКОЛА</a></li>
-        <li class="it"><a href="" class="line">КОНТАКТЫ</a></li>  
-        </ul>
-    </div>
+            <div class="logo_contacts">
+                    <div class="romb">
+                        <div class="logo">
+                        <div><img src="img/mark3.svg" alt="logo" width="27px" height="27px"></div>
+                        <div class="logo_logo">NORN</div>       
+                    </div></div>
+        
+                <div class="menu">
+                    <div class="menu_line"></div>
+                    <div class="menu_line"></div>
+                    <div class="menu_line"></div>
+            </div>
+        
+            <div class="contacts_text">
+            <div class="kegl_13">+ 7 893 567 78 67</div>
+                    <div class="kegl_m">Позвонить
+                        <img src="img/phone.svg" alt="phone" width="11px" height="11px">
+                    </div>
+                    </div>  
+        </div>
+        <div class="text_main">
+            <div class="text_maim_pad">Очное и онлайн обучение скандинавским<br>языкам в Санкт-Петербурге</div>
+        <div class="text_maim_line">норвежский<br>финский<br>датский<br>исладский<br>шведский</div>
+        <div class="rombik_m"></div>
+        </div>
+    <div class="button">ПОДРОБНЕЕ</div>
+   <div class="gradient_contact"></div>
+        </div>
     <div class="education2">
         <div class="edu_center">
-        <div><img src="img/mark5_white.svg" alt="logo" width="130px" height="117px"></div>
+        <div><img src="img/mark5_white.svg" alt="logo" width="50px" height="46px"></div>
         <div class="logo2_2">КАКОЙ ВИД ОБУЧЕНИЯ ПОДОЙДЕТ ВАМ?</div>
         </div>
         <div class="education2_0">
-        <div class=education2_1> 
-            <div>ОНЛАЙН</div>
-            <div>Подойдет для удаленного изучения</div>
-            <div class="text_edu_2_1"><a href="" class="line_white">ЗАПОЛНИТЬ АНКЕТУ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
+        <div class=education_blok> 
+            <div class="kegl_b">ОНЛАЙН</div>
+            <div class="kegl_m">Подойдет для  изучения из любой точки мира</div>
+            <div class="kegl_m"><a href="" class="line_white">ЗАПОЛНИТЬ АНКЕТУ</a><img class="ar" src="img/arrow.svg" width="20px" height="12px"></div>
         </div>
         <img src="img/rombik.svg" alt="rombik" width="15px" height="15px">
-        <div class="education2_2">
-            <div>ЗАНЯТИЯ В ГРУППЕ</div>
-            <div>Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе</div>
-            <div class="text_edu_2_2"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ</a><img class="ar" src="img/arrow.svg" width="29px" height="17px"></div>
+        <div class="education_blok">
+            <div class="kegl_b">ЗАНЯТИЯ В ГРУППЕ</div>
+            <div class="kegl_m">Небольшие группы и удобные аудитории для тех, кто предпочитает учитьязыки в группе</div>
+            <div class="kegl_m"><a href="" class="line_white">СМОТРЕТЬ РАСПИСАНИЕ</a><img class="ar" src="img/arrow.svg" width="20px" height="12px"></div>
         </div>
         <img src="img/rombik.svg" alt="rombik" width="15px" height="15px">
         <div class=education2_3>
-            <div>ИНДИВИДУАЛЬНОЕ ОБУЧЕНИЕ</div>
-            <div>Индивидуальные занятия с 
+            <div class="kegl_b">ИНДИВИДУАЛЬНОЕ ОБУЧЕНИЕ</div>
+            <div class="kegl_m">Индивидуальные занятия с 
             преподавателем в удобное 
             время </div>
         </div>
