--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="slaider_index">
       
     <div class="education4">
-           <div><img src="img/mark1_white.svg" alt="logo" width="100px" height="100px"></div>
+           <img src="img/mark1_white.svg" alt="logo" width="100px" height="100px">
            <div class="text_padding">ЧТО УЧЕНИКИ ГОВОРЯТ О НАС</div>
     </div>       
            
