--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
         </div>
 
         <div class="container_student">
-                <div class="student_foto"><img src="img/img_student.png" alt="student" width="345px" height="329px"></div>
+            <div class="kub_student">
                 <div class="kub_vkube_student"></div>
+                <div class="student_foto"><img src="img/img_student.png" alt="student" width="345px" height="329px"></div>
+            </div>
         </div>
 
         <div class="container_cup">
