--- a/index_2.html
+++ b/index_2.html
@@ -143,57 +143,163 @@
             <div class="flex_raspisanie">
                     <div class="raspisanie">
                             <div class="raspisanie_fon"></div>
-                        <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie">
                             <div class="rombiki_raspisanie1"></div>
                             <div class="rombiki_raspisanie2">
-                                    <div class="rombiki_raspisanie2_1"></div>
-                            </div>
+                            <div class="rombiki_raspisanie2_1"></div></div>
                             <div class="rombiki_raspisanie3"> 
-                                <div class="rombiki_raspisanie3_1"></div>
-                                                                </div>
+                            <div class="rombiki_raspisanie3_1"></div></div>
                             <div class="rombiki_raspisanie4"></div>
                             <div class="rombiki_raspisanie5">
-                                    <div class="rombiki_raspisanie5_1"></div>
-                            </div>
+                            <div class="rombiki_raspisanie5_1"></div></div>
                             <div class="rombiki_raspisanie6">
-                                    <div class="rombiki_raspisanie6_1"></div>
-                            </div>
+                            <div class="rombiki_raspisanie6_1"></div></div>
                             <div class="rombiki_raspisanie7"></div>
-                            <div class="rombiki_raspisanie8"></div>
-                        </div>
-                        <div class="rombiki_raspisanie_text">
-                         <div class="yrok_raspisanie">
-                            <div>05.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А1</div>
-                            <div>07.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А2</div>
-                            <div>10.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский B1</div>
-                            <div>20.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский А1</div>
-                         </div>
-                            <div class="rombiki_raspisanie_mesiac">ФЕВРАЛЬ</div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                            <div class="effekt_raspisanie">05.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А1</div>
+                            <div class="effekt_raspisanie">07.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский А2</div>
+                            <div class="effekt_raspisanie">10.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский B1</div>
+                            <div class="effekt_raspisanie">20.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский А1</div></div>
+                            <div class="rombiki_raspisanie_mesiac">ФЕВРАЛЬ</div></div>
                     </div>
-                    </div>
-
-                    <div class="raspisanie"> </div> 
-
-                    <div class="raspisanie"> </div> 
-
-                    <div class="raspisanie"> </div> 
-
-                    <div class="raspisanie"> </div> 
 
                     <div class="raspisanie">
+                            <div class="raspisanie_fon"></div>
+                            <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                            <div class="rombiki_raspisanie2_1"></div></div>
+                            <div class="rombiki_raspisanie3"> 
+                            <div class="rombiki_raspisanie3_1"></div></div>
+                            <div class="rombiki_raspisanie4"></div>
+                            <div class="rombiki_raspisanie5">
+                            <div class="rombiki_raspisanie5_1"></div></div>
+                            <div class="rombiki_raspisanie6">
+                            <div class="rombiki_raspisanie6_1"></div></div>
+                            <div class="rombiki_raspisanie7"></div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                            <div class="effekt_raspisanie">05.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский  А1</div>
+                            <div class="effekt_raspisanie">07.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский  А2</div>
+                            <div class="effekt_raspisanie">10.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский B2</div>
+                            <div class="effekt_raspisanie">15.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский  А2</div>
+                            <div class="effekt_raspisanie">20.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский С1</div>
+                            <div class="effekt_raspisanie">31.03 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский С2</div></div>
+                            <div class="rombiki_raspisanie_mesiac">МАРТ</div></div>
+                    </div> 
+
+                    <div class="raspisanie">
+                            <div class="raspisanie_fon"></div>
+                            <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                            <div class="rombiki_raspisanie2_1"></div></div>
+                            <div class="rombiki_raspisanie3"> 
+                            <div class="rombiki_raspisanie3_1"></div></div>
+                            <div class="rombiki_raspisanie4"></div>
+                            <div class="rombiki_raspisanie5">
+                            <div class="rombiki_raspisanie5_1"></div></div>
+                            <div class="rombiki_raspisanie6">
+                            <div class="rombiki_raspisanie6_1"></div></div>
+                            <div class="rombiki_raspisanie7"></div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                            <div class="effekt_raspisanie">05.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский А1</div>
+                            <div class="effekt_raspisanie">07.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский А2</div>
+                            <div class="effekt_raspisanie">10.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский С2</div>
+                            <div class="effekt_raspisanie">15.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский С2</div>
+                            <div class="effekt_raspisanie">20.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский С1</div>
+                            <div class="effekt_raspisanie">31.04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский С2</div></div>
+                            <div class="rombiki_raspisanie_mesiac">АПРЕЛЬ</div></div>
+                    </div> 
+
+                    <div class="raspisanie">
+                            <div class="raspisanie_fon"></div>
+                            <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                            <div class="rombiki_raspisanie2_1"></div></div>
+                            <div class="rombiki_raspisanie3"> 
+                            <div class="rombiki_raspisanie3_1"></div></div>
+                            <div class="rombiki_raspisanie4"></div>
+                            <div class="rombiki_raspisanie5">
+                            <div class="rombiki_raspisanie5_1"></div></div>
+                            <div class="rombiki_raspisanie6">
+                            <div class="rombiki_raspisanie6_1"></div></div>
+                            <div class="rombiki_raspisanie7"></div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                            <div class="effekt_raspisanie">05.05 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский А1</div>
+                            <div class="effekt_raspisanie">07.05 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;норвежский А2</div>
+                            <div class="effekt_raspisanie">10.05 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский B2</div>
+                            <div class="effekt_raspisanie">15.05 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;датский В1</div>
+                            <div class="effekt_raspisanie">20.05 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский А2</div></div>
+                            <div class="rombiki_raspisanie_mesiac">МАЙ</div></div>
+                    </div> 
+
+                    <div class="raspisanie">
+                            <div class="raspisanie_fon"></div>
+                            <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                            <div class="rombiki_raspisanie2_1"></div></div>
+                            <div class="rombiki_raspisanie3"> 
+                            <div class="rombiki_raspisanie3_1"></div></div>
+                            <div class="rombiki_raspisanie4"></div>
+                            <div class="rombiki_raspisanie5">
+                            <div class="rombiki_raspisanie5_1"></div></div>
+                            <div class="rombiki_raspisanie6">
+                            <div class="rombiki_raspisanie6_1"></div></div>
+                            <div class="rombiki_raspisanie7"></div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                                    <div class="effekt_raspisanie">05.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский В1</div>
+                                    <div class="effekt_raspisanie">07.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский В2</div>
+                                    <div class="effekt_raspisanie">10.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский B2</div>
+                                    <div class="effekt_raspisanie">15.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский С1</div>
+                                    <div class="effekt_raspisanie">20.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский С1</div></div>
+                            <div class="rombiki_raspisanie_mesiac">ИЮНЬ</div></div>
+                    </div> 
+
+                    <div class="raspisanie">
+                            <div class="raspisanie_fon"></div>
+                            <div class="rombiki_raspisanie">
+                            <div class="rombiki_raspisanie1"></div>
+                            <div class="rombiki_raspisanie2">
+                            <div class="rombiki_raspisanie2_1"></div></div>
+                            <div class="rombiki_raspisanie3"> 
+                            <div class="rombiki_raspisanie3_1"></div></div>
+                            <div class="rombiki_raspisanie4"></div>
+                            <div class="rombiki_raspisanie5">
+                            <div class="rombiki_raspisanie5_1"></div></div>
+                            <div class="rombiki_raspisanie6">
+                            <div class="rombiki_raspisanie6_1"></div></div>
+                            <div class="rombiki_raspisanie7"></div>
+                            <div class="rombiki_raspisanie8"></div></div>
+                            <div class="rombiki_raspisanie_text">
+                            <div class="yrok_raspisanie">
+                                    <div class="effekt_raspisanie">05.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский С2</div>
+                                    <div class="effekt_raspisanie">07.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский С2</div>
+                                    <div class="effekt_raspisanie">10.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский B2</div>
+                                    <div class="effekt_raspisanie">15.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;шведский В1</div>
+                                    <div class="effekt_raspisanie">20.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;финский С1</div>
+                                    <div class="effekt_raspisanie">31.07 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;исландский В1</div></div>
+                            <div class="rombiki_raspisanie_mesiac">ИЮЛЬ</div></div>
                             <div class="flex_zapisi">
                                     <div class="flex_zapis left"><div class="flex_zapis_text">ЗАПИСАТЬСЯ<br>В ГРУППУ</div>
                                     <div></div>
                                     </div>
                                     <div class="flex_zapis right"><div class="flex_zapis_text">ДОБАВИТЬ<br>В КАЛЕНДАРЬ</div>
                                     </div>
-                                   </div> </div> 
-
-            </div>
+                                   </div> </div> </div>
            </div>
-
 <div class="footer">
-
 <div class="romb_footer"></div>
 <div class="romb_footer_logo">
 <img src="img/mark3_white.svg" alt="logo" width="61px" height="61px">
@@ -209,22 +315,22 @@
         + 7 893 567 78 67</p>
 </div>
 <div class="flex_text_footer">
-<div class="tex_foter">
-<div>Шведский язык</div>
-<div>Норвежский язык</div>
-<div>Исландский язык</div>
-<div>Финский язык</div>
-<div>Датский язык</div>
-<div>Тестирование</div>
-<div>Формы обучения</div>
+<div class="tex_foter line_height">
+<div class="margin">Шведский язык</div>
+<div class="margin">Норвежский язык</div>
+<div class="margin">Исландский язык</div>
+<div class="margin">Финский язык</div>
+<div class="margin">Датский язык</div>
+<div class="margin">Тестирование</div>
+<div class="margin">Формы обучения</div>
 </div>
-<div class="tex_foter">
-<div>Аудитории</div>
-<div>Преподаватели</div>
-<div>Летняя школа</div>
-<div>Отзывы</div>
-<div>Политика конфиденциальности</div>
-<div>FAQ</div>
+<div class="tex_foter line_height">
+<div class="margin">Аудитории</div>
+<div class="margin">Преподаватели</div>
+<div class="margin">Летняя школа</div>
+<div class="margin">Отзывы</div>
+<div class="margin">Политика<br>конфиденциальности</div>
+<div class="margin">FAQ</div>
 </div>
 </div>
 </div>
