--- a/index_main.html
+++ b/index_main.html
@@ -30,7 +30,7 @@
 
     <div class="menu">
         <ul class="menu_tab">
-        <li class="it_left"><a href="index_2.html" class="line">КУРСЫ</a></li>
+        <li class="it_left"><a href="index_courses.html" class="line">КУРСЫ</a></li>
         <li class="it"><a href="" class="line">О НАС</a></li>
         <li class="it"><a href="" class="line">ЛЕТНЯЯ ШКОЛА</a></li>
         <li class="it"><a href="" class="line">КОНТАКТЫ</a></li>  
