--- a/index_courses.html
+++ b/index_courses.html
@@ -25,7 +25,7 @@
                        
                                 <ul class="menu_tab_c">
                                 <li class="it"><a href="" class="line">КУРСЫ</a></li>
-                                <li class="it"><a href="index.html" class="line">О НАС</a></li>
+                                <li class="it"><a href="index_main.html" class="line">О НАС</a></li>
                                 <li class="it"><a href="" class="line">ЛЕТНЯЯ ШКОЛА</a></li>
                                 <li class="it"><a href="" class="line">КОНТАКТЫ</a></li>  
                                 </ul>
