--- a/index_courses.html
+++ b/index_courses.html
@@ -306,7 +306,7 @@
 <div class="tex_foter_c"> NORN<br>
       школа скандинавских языков</div>
 </div>
-<div class="tex_foter footer_tex_c"> 
+<div class="tex_foter_c footer_tex_c"> 
     <p>199983, Санкт-Петербург<br>
         ул. Казанская, 32, БЦ “Успех”, 7 этаж<br>
         c 10:00 до 22:00 с ПН по СБ</p>
